# ProjectScope

./: .env.example  .gitignore  Makefile  README.md  architecture.yaml  pyproject.toml
data/: golden_set.yaml  sample_incident.json
src/projectscope/: __init__.py  cli.py  eval.py  pipeline.py  schemas.py
src/projectscope.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_eval.py  test_pipeline.py
